fixed content overflow issues

--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@
 
 html,
 body {
-  height: 100vh;
+  height: 100%;
+  background-color: hsl(185, 41%, 84%);
 }
 
-body {
+.body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: hsl(185, 41%, 84%);
 }
 
 .parent {
@@ -77,14 +77,14 @@ body {
 h1 {
   text-align: center;
   width: 90px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 20px 0;
   word-wrap: break-word;
   color: #3b6162;
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 8px;
-  margin: 10px 0;
+  /* margin: 10px 0; */
 }
 
 /* header {
@@ -268,7 +268,7 @@ button.active {
     top: -20px;
   } */
 
-  body {
+  .body {
     padding: 100px 0;
   }
 
@@ -282,9 +282,9 @@ button.active {
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    height: auto;
     width: auto;
     max-width: 70vw;
+    height: auto;
     border-radius: 20px;
     /* max-height: 60vh; */
   }
